Removed the need of specifying the schema name when installing the database

--- a/Contendio.Test/Contendio.Test.csproj
+++ b/Contendio.Test/Contendio.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContentRepositoryTest.cs" />
+    <Compile Include="UtilsTest.cs" />
     <Compile Include="EventTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
