--- a/Contendio.Sql/Contendio.Sql.csproj
+++ b/Contendio.Sql/Contendio.Sql.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SqlUtils.cs" />
     <Compile Include="Entity\BinaryValueEntity.cs" />
     <Compile Include="Entity\IEntityWithId.cs" />
     <Compile Include="Entity\NodeEntity.cs" />
