--- a/Contendio.Test/Contendio.Test.csproj
+++ b/Contendio.Test/Contendio.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContentRepositoryTest.cs" />
+    <Compile Include="NodeTest.cs" />
     <Compile Include="NodeValueTest.cs" />
     <Compile Include="InstallAndUninstallTest.cs" />
     <Compile Include="UtilsTest.cs" />
