Changed Repository properties into Workspace properties instead. Added MetaType so that we can delete entries from the database

--- a/Contendio.Sql/Contendio.Sql.csproj
+++ b/Contendio.Sql/Contendio.Sql.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\DateValueEntity.cs" />
+    <Compile Include="Mapping\RepositoryMetaType.cs" />
     <Compile Include="SqlUtils.cs" />
     <Compile Include="Entity\BinaryValueEntity.cs" />
     <Compile Include="Entity\IEntityWithId.cs" />
