You can now move nodes between the same parent

--- a/Contendio.Sql/Contendio.Sql.csproj
+++ b/Contendio.Sql/Contendio.Sql.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayUtils.cs" />
     <Compile Include="Mapping\RepositoryMetaType.cs" />
     <Compile Include="SqlUtils.cs" />
     <Compile Include="Entity\IEntityWithId.cs" />
