Added support for deep movement of nodes

--- a/Contendio.Test/Contendio.Test.csproj
+++ b/Contendio.Test/Contendio.Test.csproj
@@ -49,7 +49,9 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseNodeData.cs" />
     <Compile Include="ContentRepositoryTest.cs" />
+    <Compile Include="MoveNode\MoveNodeAfter.cs" />
     <Compile Include="NodeOrderTest.cs" />
     <Compile Include="NodeTest.cs" />
     <Compile Include="NodeValueTest.cs" />
@@ -68,6 +70,7 @@
       <Name>Contendio</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
