--- a/Contendio.Test/Contendio.Test.csproj
+++ b/Contendio.Test/Contendio.Test.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="BaseTest.cs" />
     <Compile Include="SqlNodeValue\DateValueTest.cs" />
+    <Compile Include="SqlNodeValue\IntValueTest.cs" />
     <Compile Include="SqlNodeValue\StringValueTest.cs" />
     <Compile Include="SqlNode\AddNodeTest.cs" />
     <Compile Include="SqlNode\MoveAfterTest.cs" />
